```toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pll-market-microstructure"
version = "0.1.0"
description = "Adaptive Kalman filter for price denoising using spread as SNR proxy"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "matplotlib>=3.4",
    "scipy>=1.7",
]
